--- a/Vibez/Vibez/nbproject/private/private.properties
+++ b/Vibez/Vibez/nbproject/private/private.properties
@@ -1,3 +1,2 @@
-compile.on.save=true
-file.reference.jaco-mp3-player-0.9.3.jar=C:\\Users\\ajtor\\Desktop\\Vibez\\Vibez\\lib\\jaco-mp3-player-0.9.3.jar
+file.reference.jaco-mp3-player-0.9.3.jar-1=C:\\Users\\ajtor\\Desktop\\Vibez\\lib\\jaco-mp3-player-0.9.3.jar
 user.properties.file=C:\\Users\\ajtor\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
