--- a/Vibez/Vibez/nbproject/project.properties
+++ b/Vibez/Vibez/nbproject/project.properties
@@ -27,12 +27,16 @@ dist.dir=dist
 dist.jar=${dist.dir}/Vibez.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.jaco-mp3-player-0.9.3.jar=lib\\jaco-mp3-player-0.9.3.jar
+file.reference.jaco-mp3-player-0.9.3.jar-1=C:\\Users\\adamm\\Desktop\\VIBEZ FOLDER\\jaco-mp3-player-0.9.3.jar
 file.reference.mp3agic-0.9.0.jar=lib\\mp3agic-0.9.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.jaco-mp3-player-0.9.3.jar}:\
-    ${file.reference.mp3agic-0.9.0.jar}
+    ${file.reference.mp3agic-0.9.0.jar}:\
+    ${file.reference.jaco-mp3-player-0.9.3.jar-1}:\
+    ${file.reference.jaco-mp3-player-0.9.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
